--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
 }
 body {
   padding-top: 70px;
-  background-image: url("/res/coding_1.jpg");
+  background-image: url("/res/bg_desktop.jpg");
   background-size: cover;
   background-attachment: fixed;
   color: aliceblue;
